--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body {
   min-height: 100vh;
   margin: 0;
   background: #eee;
+  flex-direction:column;
   font-family: 'Open Sans', sans-serif; }
 
 img {
