Testing branching with netlify

--- a/css/_page-head.scss
+++ b/css/_page-head.scss
@@ -2,18 +2,25 @@
     #PAGE HEADER STYLES
 \*------------------------------------*/
 
+header {
+
+  background-color:#e8e8e8;
+
+}
+
 h2.title {
 
 	position:relative;
 	width:280px;
-	margin:60px auto 30px;
+  height:100px;
+	margin:20px auto;
 
 	a {
 
 		display:block;
 		position:relative;
 		height:inherit;
-		width: 220px;
+		width: inherit;
 		margin:0 auto;
 
 		background-image:url(../img/Assure-Energy-Logo.svg);
