--- a/css/_page-head.scss
+++ b/css/_page-head.scss
@@ -5,6 +5,7 @@
 header {
 
   background-color:#e8e8e8;
+  padding-bottom:50px;
 
 }
 
@@ -12,7 +13,7 @@ h2.title {
 
 	position:relative;
 	width:280px;
-  height:100px;
+  height:70px;
 	margin:20px auto;
 
 	a {
