--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,12 @@
 @import "bootstrap4/bootstrap";
 @import "config";
-
+@import "menu-btn";
 @import "fonts";
 @import "text";
 @import "misc";
 
 @import "page-head";
 @import "page-foot";
+
+@import "feature-photo";
+@import "buttons";
