--- a/css/_feature-photo.scss
+++ b/css/_feature-photo.scss
@@ -9,8 +9,19 @@
 
   color:#fff;
 
-  .feature__title {
-    font-size:50px;
+  @include media-breakpoint-up(lg){
+    padding-top:350px;
+    padding-bottom:350px;
   }
 
+  &.small {
+    padding-top:200px!important;
+    padding-bottom:200px!important;
+  }
+
+}
+
+.feature__title {
+  font-size:50px;
+  margin-bottom:40px;
 }
