--- a/css/_menu-btn.scss
+++ b/css/_menu-btn.scss
@@ -2,6 +2,10 @@
 
 .menu-btn {
 
+  @include media-breakpoint-up(lg){
+    display:none;
+  }
+
   font-size:30px;
   text-align: center;
   cursor:pointer;
@@ -82,6 +86,26 @@
       color:#fff;
       font-weight:normal;
     }
+  }
+
+  @include media-breakpoint-up(lg){
+
+    position: relative;
+    visibility: visible;
+    opacity: 1;
+    z-index:999;
+    background:none;
+    flex-direction:row;
+    justify-content: flex-start;
+
+    li {
+      margin-bottom:0;
+      margin-right:30px;
+      a {
+        font-size:18px;
+      }
+    }
+
   }
 
 }
