--- a/css/_misc.scss
+++ b/css/_misc.scss
@@ -20,11 +20,24 @@ img{
   max-width:75%;
 }
 
+.narrow-container {
+	margin:0 auto;
+	width:auto;
+	max-width:75%;
+	@include media-breakpoint-up(md){
+		max-width:50%;
+	}
+}
+
 .content {
   padding-top:50px;
   padding-bottom:50px;
   @include media-breakpoint-up(lg){
     padding-top:80px;
     padding-bottom:80px;
+  }
+	@include media-breakpoint-up(xl){
+    padding-top:100px;
+    padding-bottom:100px;
   }
 }
