--- a/css/_page-foot.scss
+++ b/css/_page-foot.scss
@@ -2,6 +2,18 @@
     #PAGE FOOTER STYLES
 \*------------------------------------*/
 
-footer{
+footer {
+
+  background-color: $dark;
+  color:#fff;
+
+  h2.title {
+    @include media-breakpoint-up(lg){
+      margin-left:0;
+    }
+    a {
+      background-image:url(../img/Assure-Energy-Logo-white.svg);
+    }
+  }
 
 }
