--- a/css/_photo-columns.scss
+++ b/css/_photo-columns.scss
@@ -1,5 +1,11 @@
 .photo-columns {
 
+  color:#6b6b6b;
+
+  h1,h2,h3,h4,h5,h6 {
+    color:#000;
+  }
+
   img {
     margin-bottom:50px;
     margin-top:50px;
