--- a/css/_feature-photo.scss
+++ b/css/_feature-photo.scss
@@ -6,8 +6,19 @@
 
   padding-top:200px;
   padding-bottom:200px;
-
+  position: relative;
   color:#fff;
+
+  &:before {
+    content:'';
+    background:rgba(0,0,0,0.3);
+    height:100%;
+    width:100%;
+    position: absolute;
+    top:0;
+    left:0;
+    z-index:0;
+  }
 
   @include media-breakpoint-up(lg){
     padding-top:350px;
@@ -17,12 +28,16 @@
   &.small {
     padding-top:200px!important;
     padding-bottom:200px!important;
+    &:before {
+      background:rgba(0,0,0,0.6);
+    }
   }
 
 }
 
 .feature__title {
   font-size:50px;
+  position: relative;
   margin-bottom:40px;
   @include media-breakpoint-up(lg){
     &.larger {
