--- a/css/_page-head.scss
+++ b/css/_page-head.scss
@@ -6,6 +6,8 @@ header {
 
   background-color:#e8e8e8;
   padding-bottom:50px;
+  position: relative;
+  z-index:1;
 
   @include media-breakpoint-up(lg){
     position: absolute;
@@ -24,6 +26,7 @@ h2.title {
 	width:280px;
   height:70px;
 	margin:20px auto;
+  z-index:1;
 
 	a {
 
@@ -36,6 +39,10 @@ h2.title {
 		background-image:url(../img/Assure-Energy-Logo.svg);
 		background-repeat:no-repeat;
 		background-size:contain;
+
+    @include media-breakpoint-up(lg){
+      background-image:url(../img/Assure-Energy-Logo-white.svg);
+    }
 
 	}
 
