--- a/css/_text.scss
+++ b/css/_text.scss
@@ -50,6 +50,10 @@ article{
   color:$tertiary;
 }
 
+.bg-grey {
+	background:#eee;
+}
+
 h1,h2,h3,h4,h5,h6, .h1,.h2,.h3,.h4,.h5,.h6 {
 	font-family:$headers;
 }
