--- a/css/_text.scss
+++ b/css/_text.scss
@@ -74,6 +74,14 @@ h1,h2,h3,h4,h5,h6, .h1,.h2,.h3,.h4,.h5,.h6 {
 	font-family:$headers;
 }
 
+p.h4 {
+	display:inline-block;
+	position: relative;
+	border-bottom:3px solid $primary;
+	padding-bottom:5px;
+	margin-bottom:20px;
+}
+
 h2 {
 	@include media-breakpoint-up(lg){
 		font-size: 2.75rem;
