--- a/css/_page-head.scss
+++ b/css/_page-head.scss
@@ -23,10 +23,16 @@ header {
 h2.title {
 
 	position:relative;
-	width:280px;
-  height:70px;
+	width:220px;
+  height:55px;
 	margin:20px auto;
+  margin-left: 0;
   z-index:1;
+
+  @include media-breakpoint-up(lg){
+    width:280px;
+    height:70px;
+  }
 
 	a {
 
