BG fixed to feature photo

--- a/css/_feature-photo.scss
+++ b/css/_feature-photo.scss
@@ -23,6 +23,7 @@
   @include media-breakpoint-up(lg){
     padding-top:350px;
     padding-bottom:350px;
+    background-attachment: fixed;
   }
 
   &.small {
