--- a/css/_menu-btn.scss
+++ b/css/_menu-btn.scss
@@ -10,8 +10,8 @@
   text-align: center;
   cursor:pointer;
   position: absolute;
-  top:-70px;
-  right:15px;
+  top:-100px;
+  left:-20px;
 
   label {
     position: relative;
