--- a/css/_cards.scss
+++ b/css/_cards.scss
@@ -1,11 +1,27 @@
 .cg__cards {
+
   margin-top:20px;
+  margin-left:15px;
+  margin-right:15px;
+
+  @include media-breakpoint-up(md){
+    margin-left:0;
+    margin-right:0;
+  }
+
 }
 
 .cg__card {
 
   margin-bottom:40px;
   color:#6b6b6b;
+  margin-left:-30px;
+  margin-right:-30px;
+
+  * {
+    padding-left:15px;
+    padding-right:15px;
+  }
 
   .h4 {
     color:#000;
@@ -13,6 +29,11 @@
       margin-top:20px;
       margin-bottom:30px;
     }
+  }
+
+  @include media-breakpoint-up(md){
+    margin-left:0;
+    margin-right:0;
   }
 
   @include media-breakpoint-up(lg){
@@ -24,6 +45,7 @@
     height:175px;
     width:100%;
     object-fit: cover;
+    padding:0;
   }
 
 
