--- a/css/_feature-photo.scss
+++ b/css/_feature-photo.scss
@@ -8,10 +8,11 @@
   padding-bottom:200px;
   position: relative;
   color:#fff;
+  text-shadow:1px 1px 10px #000;
 
   &:before {
     content:'';
-    background:rgba(0,0,0,0.3);
+    //background:rgba(0,0,0,0.3);
     height:100%;
     width:100%;
     position: absolute;
