--- a/css/_page-head.scss
+++ b/css/_page-head.scss
@@ -7,6 +7,7 @@ header {
   //background-color:#e8e8e8;
   position: relative;
   z-index:2;
+  text-shadow:1px 1px 10px #000;
 
   @include media-breakpoint-up(lg){
     position: absolute;
