--- a/css/_feature-photo.scss
+++ b/css/_feature-photo.scss
@@ -10,6 +10,14 @@
   color:#fff;
   text-shadow:1px 1px 10px #000;
 
+  p {
+    font-size:30px;
+    font-weight:bold;
+    @include media-breakpoint-up(lg){
+      font-size:45px;
+    }
+  }
+
   &:before {
     content:'';
     //background:rgba(0,0,0,0.3);
