--- a/css/_text.scss
+++ b/css/_text.scss
@@ -74,6 +74,11 @@ h1,h2,h3,h4,h5,h6, .h1,.h2,.h3,.h4,.h5,.h6 {
 	font-family:$headers;
 }
 
+.roadgeek {
+	font-family:$roadgeek;
+	letter-spacing: -0.09em;
+}
+
 p.h4 {
 	display:inline-block;
 	position: relative;
