--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -2,6 +2,8 @@
     #FONTS
 \*------------------------------------*/
 
+@font-face {font-family:"Roadgeek";src:url("../fonts/Roadgeek_2000_Series_E_M_.eot?") format("eot"),url("../fonts/Roadgeek_2000_Series_E_M_.woff") format("woff"),url("../fonts/Roadgeek_2000_Series_E_M_.ttf") format("truetype"),url("../fonts/Roadgeek_2000_Series_E_M_.svg#Roadgeek2000SeriesEModified") format("svg");font-weight:normal;font-style:normal;}
+
 @font-face {
     font-family: "Arca";
     src: url(../fonts/ArcaMajora3-Bold.ttf);
