--- a/css/_config.scss
+++ b/css/_config.scss
@@ -1,10 +1,11 @@
 // Font
 $font-stack: "Source Sans Pro", Helvetica, Arial, sans-serif;
-$headers: "Arca", $font-stack;
+$headers: "Roadgeek", $font-stack;
+$arca: "Arca", $font-stack;
 $roadgeek: "Roadgeek", $font-stack;
 // Colours
 $text-color: #000;
-$primary: #971b1e;
+$primary: #961c1f;
 $secondary: #3a393a;
 $tertiary: #eee;
 $dark:#1d1d1d;
