--- a/css/_menu-btn.scss
+++ b/css/_menu-btn.scss
@@ -88,7 +88,7 @@
     }
     a {
       font-size:25px;
-      font-family:$headers;
+      font-family:$arca;
       color:#fff;
       font-weight:normal;
     }
