--- a/css/_feature-photo.scss
+++ b/css/_feature-photo.scss
@@ -42,10 +42,15 @@
 
   &.small {
     text-align:left!important;
-    padding-top:200px!important;
-    padding-bottom:200px!important;
+    padding-top:100px;
+    background-attachment: scroll!important;
+    padding-bottom:100px;
     &:before {
       background:rgba(0,0,0,0.3);
+    }
+    @include media-breakpoint-up(lg){
+      padding-top:200px;
+      padding-bottom:200px;
     }
   }
 
@@ -54,7 +59,6 @@
     background-attachment: scroll!important;
     p, li {
       font-size:20px!important;
-      color:#eee;
     }
   }
 
