Fixed footer logo

--- a/css/_page-foot.scss
+++ b/css/_page-foot.scss
@@ -18,6 +18,7 @@ footer {
   h2.title {
     margin-top:0;
     @include media-breakpoint-up(lg){
+      width:100%;
       margin-left:0;
     }
     a {
