--- a/css/_feature-photo.scss
+++ b/css/_feature-photo.scss
@@ -55,7 +55,7 @@
   }
 
   &.service {
-    border-bottom:10px solid #fff;
+    //border-bottom:10px solid #fff;
     background-attachment: scroll!important;
     p, li {
       font-size:20px!important;
